# quadprog-rs

./: Cargo.toml  README.md  tests.md
benches/: maros_benchmark.rs
qp/: optim.yaml
qp/maros/: CVXQP1S.json  CVXQP2S.json  CVXQP3S.json  DPKLO1.json  DUAL1.json  DUAL2.json  DUAL3.json  DUAL4.json  DUALC1.json  DUALC2.json  DUALC5.json  DUALC8.json  GENHS28.json  HS118.json  HS21.json  HS35.json  HS35MOD.json  HS51.json  HS52.json  HS53.json  HS76.json  LOTSCHD.json  PRIMAL1.json  PRIMAL2.json  PRIMALC1.json  PRIMALC2.json  PRIMALC5.json  QADLITTL.json  QAFIRO.json  QBEACONF.json  QBRANDY.json  QISRAEL.json  QPCBLEND.json  QPCBOEI2.json  QPTEST.json  QRECIPE.json  QSC205.json  QSCAGR7.json  QSHARE1B.json  QSHARE2B.json  (+4 more)
qp/maros_feasible/: CVXQP1S.json  CVXQP2S.json  CVXQP3S.json  DPKLO1.json  DUAL1.json  DUAL2.json  DUAL3.json  DUAL4.json  DUALC1.json  DUALC2.json  DUALC5.json  DUALC8.json  GENHS28.json  HS118.json  HS21.json  HS35.json  HS35MOD.json  HS51.json  HS52.json  HS53.json  HS76.json  LOTSCHD.json  PRIMALC1.json  PRIMALC2.json  PRIMALC5.json  QADLITTL.json  QAFIRO.json  QBEACONF.json  QBRANDY.json  QISRAEL.json  QPCBLEND.json  QPCBOEI2.json  QPTEST.json  QRECIPE.json  QSC205.json  QSCAGR7.json  QSHARE2B.json  S268.json  TAME.json  VALUES.json  (+1 more)
qp/presolve/: dims_hess_c.yaml  minimal_problem.json  rectangular_hess2.yaml
qp/read/: full_problem.json  (+2 more)
results/: as_fsp_results.csv  as_results.csv  ip_results(0.95).csv  ip_results(0.98).csv  ip_results(0.99).csv  ip_results(1.0).csv  ip_results.csv
sample_problems/: mid_problem.yaml
src/: base.rs  lib.rs
(+36 files in other folders)
